[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Game_Over.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Lato_Reg.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/sprites/Player.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Lato-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/Background_color.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/Lato-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/sprites/exit.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/Lato-Light.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/sprites/refresh.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[node name="Game_Over" type="Node2D"]
script = ExtResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Title_1" type="Label" parent="HUD"]
modulate = Color( 0.0313726, 0.776471, 0.670588, 1 )
margin_left = 48.0
margin_top = 208.0
margin_right = 294.0
margin_bottom = 309.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.956863, 1 )
text = "GAME"
align = 1
percent_visible = 2.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title_2" type="Label" parent="HUD"]
margin_left = 184.0
margin_top = 208.0
margin_right = 430.0
margin_bottom = 309.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.956863, 1 )
text = "OVER!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUD"]
modulate = Color( 0.0313726, 0.776471, 0.670588, 1 )
margin_left = 133.0
margin_top = 80.0
margin_right = 347.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.956863, 1 )
text = "SCORE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_Value" type="Label" parent="HUD"]
modulate = Color( 0.0313726, 0.776471, 0.670588, 1 )
margin_left = 133.0
margin_top = 136.0
margin_right = 347.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.956863, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="By_Label" type="Label" parent="HUD"]
margin_left = 183.5
margin_top = 650.0
margin_right = 296.5
margin_bottom = 693.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.956863, 1 )
text = "By
Joshua Husayan"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HUD"]
modulate = Color( 0.956863, 0.956863, 0.956863, 1 )
margin_left = 200.0
margin_top = 344.0
margin_right = 276.0
margin_bottom = 414.0
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="HUD"]
modulate = Color( 0.0313726, 0.776471, 0.670588, 1 )
margin_left = 72.0
margin_top = 496.0
margin_right = 184.0
margin_bottom = 602.0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_Node" type="Node2D" parent="."]

[node name="Background_color" type="Sprite" parent="Background_Node"]
modulate = Color( 0.203922, 0.192157, 0.192157, 1 )
position = Vector2( 0, 336 )
scale = Vector2( 70.75, 73.5 )
texture = ExtResource( 3 )
script = ExtResource( 5 )

[connection signal="pressed" from="HUD/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HUD/Quit" to="." method="_on_Quit_pressed"]
